# libopenal_debug

./: Makefile.am  NEWS  README.md  autogen.sh  configure.ac  libopenal_debug.pc.in
src/: Makefile.am  hello.cc  openal_debug.c
